--- a/res/layout/map.xml
+++ b/res/layout/map.xml
@@ -4,11 +4,18 @@
   android:orientation="vertical"
   android:layout_width="wrap_content"
   android:layout_height="fill_parent"   >
-     <com.google.android.maps.MapView
+  <HorizontalScrollView  android:layout_width="fill_parent" android:layout_marginBottom="6dp" android:layout_height="200dp">
+       <com.google.android.maps.MapView
                  android:layout_width="fill_parent"
                  android:id="@+id/map" 
-                 android:layout_height="fill_parent"
+                 android:layout_height="wrap_content"
                   android:clickable="true"
                  android:apiKey="0YlIbjg1_CWOBA4xdxqIRYeILTdJYEaPJ8PFMAQ"
                  />
+  </HorizontalScrollView>
+
+    <LinearLayout android:id="@+id/linearLayout1" android:layout_height="wrap_content" android:layout_width="fill_parent">
+    <Button android:text="按钮1" android:layout_height="50dp" android:layout_width="50dp"  android:layout_marginBottom="5dp"></Button>
+    <Button android:text="对话框" android:layout_height="50dp" android:layout_width="50dp"  android:layout_marginBottom="5dp" android:id="@+id/showDialog"></Button>
+    </LinearLayout>
 </LinearLayout>
