--- a/res/layout/custom_dialog.xml
+++ b/res/layout/custom_dialog.xml
@@ -8,19 +8,18 @@
     <TableLayout android:id="@+id/tableLayout1" android:layout_height="wrap_content" android:layout_width="fill_parent">
         <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
             <TextView android:text="email" android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
-            <Spinner android:id="@+id/spinner1" android:layout_width="wrap_content" android:layout_height="wrap_content">
-            </Spinner>
+            <EditText android:layout_height="wrap_content" android:inputType="textEmailAddress" android:id="@+id/editText1" android:layout_width="50dp"></EditText>
         
         </TableRow>
         <TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
             <TextView android:text="时间日期" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
-            <DatePicker android:id="@+id/datePicker1" android:layout_width="50dp" android:layout_height="wrap_content"></DatePicker>
-            <TimePicker android:id="@+id/timePicker1" android:layout_width="50dp" android:layout_height="wrap_content"></TimePicker>
+            <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:inputType="date" android:id="@+id/editText2" ></EditText>
         </TableRow>
         <TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content" android:layout_height="wrap_content">
         </TableRow>
         <TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content" android:layout_height="wrap_content">
         </TableRow>
     </TableLayout>
+    <DatePicker android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/datePicker1"></DatePicker>
 
 </LinearLayout>
